--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
       DB_SUPER_USER:
       DB_SUPER_PASSWORD:
 
+      POSTGRES_USER: ${DB_SUPER_USER}
+      POSTGRES_PASSWORD: ${DB_SUPER_PASSWORD}
+
       DB_ORTHANC_USER:
       DB_ORTHANC_DB_PASSWORD:
 
