--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,14 +46,8 @@ services:
     # $ docker exec -it cirrdocker_db_1 sh -c 'echo "CREATE USER ${DB_ORTHANC_USER} WITH PASSWORD '\''${DB_ORTHANC_PASSWORD}'\'';" | exec psql -h "$POSTGRES_PORT_5432_TCP_ADDR" -p "$POSTGRES_PORT_5432_TCP_PORT" -U ${DB_SUPER_USER}'
     # $ docker exec -it cirrdocker_db_1 sh -c 'echo "CREATE DATABASE ${DB_ORTHANC_NAME} WITH OWNER ${DB_ORTHANC_USER};" | exec psql -h "$POSTGRES_PORT_5432_TCP_ADDR" -p "$POSTGRES_PORT_5432_TCP_PORT" -U ${DB_SUPER_USER}'
 
-
-    # $ docker exec -it cirrdocker_db_1 sh -c 'echo "CREATE USER xnat WITH PASSWORD '\''xnat_pword'\'';" | exec psql -h "$POSTGRES_PORT_5432_TCP_ADDR" -p "$POSTGRES_PORT_5432_TCP_PORT" -U db_user'
-    # $ docker exec -it cirrdocker_db_1 sh -c 'echo "CREATE DATABASE xnat WITH OWNER xnat;" | exec psql -h "$POSTGRES_PORT_5432_TCP_ADDR" -p "$POSTGRES_PORT_5432_TCP_PORT" -U db_user'
-    # $ docker exec -it cirrdocker_db_1 sh -c 'echo "CREATE USER orthanc WITH PASSWORD '\''orthanc_pword'\'';" | exec psql -h "$POSTGRES_PORT_5432_TCP_ADDR" -p "$POSTGRES_PORT_5432_TCP_PORT" -U db_user'
-    # $ docker exec -it cirrdocker_db_1 sh -c 'echo "CREATE DATABASE orthanc WITH OWNER orthanc;" | exec psql -h "$POSTGRES_PORT_5432_TCP_ADDR" -p "$POSTGRES_PORT_5432_TCP_PORT" -U db_user'
-
     # Changing a password:
-    # $ docker exec -it cirrdocker_db_1 sh -c 'echo "ALTER USER xnat WITH PASSWORD '\''xnat_pword'\'';" | exec psql -h "$POSTGRES_PORT_5432_TCP_ADDR" -p "$POSTGRES_PORT_5432_TCP_PORT" -U db_user'
+    # $ docker exec -it cirrdocker_db_1 sh -c 'echo "ALTER USER xnat WITH PASSWORD '\''my_xnat_pword'\'';" | exec psql -h "$POSTGRES_PORT_5432_TCP_ADDR" -p "$POSTGRES_PORT_5432_TCP_PORT" -U ${DB_SUPER_USER}'
 
   # ----------------------------
   orthanc:
@@ -65,6 +59,10 @@ services:
     ports:
     - "4242:4242"
     - "8042:8042"
+    environment:
+      DB_ORTHANC_USER:
+      DB_ORTHANC_PASSWORD:
+      DB_ORTHANC_NAME:
     volumes:
     - ./orthanc.json:/etc/orthanc/orthanc.json:ro
     - /var/lib/orthanc/db/  # Mounting this as a mapped folder fails on OSX
@@ -75,7 +73,7 @@ services:
     # $ docker run --rm --entrypoint=cat jodogne/orthanc /etc/orthanc/orthanc.json > ./orthanc.json
     #  => Edit orthanc.json
     #  => Modify the RegisteredUsers section to add clinic-facing users
-    #  => Add the postgres config section
+    #  => Add the postgres config section with ${DB_ORTHANC...}
 
   # ----------------------------
   xnat:
