--- a/orthanc-docker/docker-compose.yml
+++ b/orthanc-docker/docker-compose.yml
@@ -27,8 +27,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       PGDATA: /var/lib/postgresql/data
 
-      POSTGRES_CIRR_USER: ${CIRR_POSTGRES_USER}
-      POSTGRES_CIRR_PASSWORD: ${CIRR_POSTGRES_PASSWORD}
+      POSTGRES_CIRR_USER: ${POSTGRES_CIRR_USER}
+      POSTGRES_CIRR_PASSWORD: ${POSTGRES_CIRR_PASSWORD}
 
     volumes:
     - data:/var/lib/postgresql
@@ -51,7 +51,7 @@ services:
     command: ["--logdir=/var/log/orthanc", "/etc/orthanc/"]
     ports:
     - "8042:8042"
-    - "4042:4042"
+    - "4242:4242"
     volumes:
     - ./orthanc.shadow.json:/etc/orthanc/orthanc.json:ro
     - data:/var/lib/orthanc/db
