Working with xnat now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,11 @@ services:
     ports:
     - "8042:4280"
     - "4242:4242"
+    links:
+    - postgres
+    - xnat
+    depends_on:
+    - postgres
     volumes:
     - ./orthanc.shadow.json:/etc/orthanc/orthanc.json:ro
     - data:/var/lib/orthanc/db
@@ -65,11 +70,11 @@ services:
       DB_PASSWORD: "passw0rd"
 
 
-
   # ----------------------------
   orthanc-receiver:
   # ----------------------------
-    extends: orthanc
+    # Should EXTEND orthanc, but then can't include links or deps in orthanc
+    image: orthanc
     ports:
     - "8042:4380"
     - "4242:4342"
@@ -90,28 +95,31 @@ services:
 
   # ----------------------------
   xnat:
-  # A configured local xnat template has to be built separately and tagged "xnat"
+  # A configured local xnat template has to be built separately and tagged "xnat-builder"
+  # I used <https://github.com/chaselgrove/xnat-docker>, complete through the final step
   # ----------------------------
-    image: xnat
+    build: xnat-docker
     ports:
     - "8080:8080"  # HTTP
     - "8104:8042"  # DICOM
-    # - Unk API?
     volumes:
     - data:/data/xnat
-#    links:
-#    - postgres
-#    - orthanc
-#    - orthanc-receiver
+    links:
+    - postgres
+    - xnat-repo:repo
     depends_on:
     - postgres
+    - xnat-repo
     environment:
       XNAT_DIR: /data/xnat
       SITE_URL: localhost:8080
       XNAT_NAME: xnat
-      POSTGRES_USER: "xnat"
-      POSTGRES_PASSWORD: "passw0rd"
+      DB_USER: "xnat"
+      DB_PASSWORD: "passw0rd"
       DB_NAME: xnat
+
+  xnat-repo:
+    image: xnat-repo
 
   # ----------------------------
   splunk:
