--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,12 +111,12 @@ services:
     - postgres
     - xnat-repo
     environment:
-      XNAT_DIR: /data/xnat
-      SITE_URL: localhost:8080
-      XNAT_NAME: xnat
+      XNAT_DIR: "/data/xnat"
+      XNAT_URL: "http://dockerengine:8080"
+      XNAT_NAME: "XNAT"
       DB_USER: "xnat"
       DB_PASSWORD: "passw0rd"
-      DB_NAME: xnat
+      DB_NAME: "xnat165"
 
   xnat-repo:
     image: xnat-repo
