--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# CIRR-docker up!
+# CIRR UP!
 # Merck, Spring 2016
 
 version: '2.0'
@@ -132,7 +132,7 @@ services:
     volumes_from:
     - postgres
     - orthanc
-    - orthanc-receiver
+#    - orthanc-receiver
     - xnat
     ports:
     - "1514:1514"   # Syslog
